Add latest videos

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,9 +1,32 @@
 <div>
-    <img src="/public/Dragon_4_Final_Logo.png" alt="Inglorious Dragons Logo" class="nav-logo"/>
+    <a href="/">
+        <img src="/public/Dragon_4_Final_Logo.png" alt="Inglorious Dragons Logo" class="nav-logo" />
+    </a>
 </div>
 
 <nav class="navbar navbar-expand-md sticky-top navbar-light bg-light mb-4">
     <div class="container-fluid">
-        <a class="navbar-brand" href="/">INGLORIOUS DRAGONS</a>
+        <a class="navbar-brand" href="/">
+            INGLORIOUS DRAGONS
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse collapse" id="navbarSupportedContent">
+            <ul class="nav navbar-nav mr-auto">
+                {% for item in site.navigation %}
+                    {% assign current = page.url | downcase | split: '/' %}
+                    {% assign class = nil %}
+                    {% if current[1] == {{ item.title }} %}
+                        {% assign class = 'active' %}
+                    {% endif %}
+                    <li class="nav-item {{class}}">
+                        <a class="nav-link" href="{{ item.url }}">{{ item.title }}</a>
+                    </li>
+                {% endfor %}
+            </ul>
+        </div>
     </div>
 </nav>
