--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -7,11 +7,11 @@
 
   {% include header.html %}
 
-
   <main id="main">
     {{ content }}
-    </div>
+  </div>
 
+  {% include footer.html %}
 </body>
 
 </html>
