--- a/_includes/head.html
+++ b/_includes/head.html
@@ -21,7 +21,7 @@
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Montserrat:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
-
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.1/font/bootstrap-icons.css">
   <!-- CSS -->
   <link href="/public/css/bootstrap.min.lux.css" rel="stylesheet">
   <link href="/public/css/ig.css" rel="stylesheet">
